# Hability_rep

./: README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260111_001_initial_migration.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: achievements.py  gamification.py  stats.py
backend/app/core/: config.py  database.py
backend/app/domain/models/: achievement.py  completion.py  gamification.py  group.py  habit.py  stats.py  user.py
backend/app/domain/services/: achievement_service.py  gamification_service.py  stats_service.py
backend/app/infrastructure/database/: models.py  seed.py
backend/app/infrastructure/database/repositories/: achievement_repository.py  base_repository.py  completion_repository.py  habit_repository.py  stats_repository.py  user_repository.py
backend/app/schemas/: achievement.py  gamification.py  stats.py
backend/tests/: conftest.py
backend/tests/fixtures/: database_fixtures.py
backend/tests/integration/: test_achievements_api.py  test_gamification_api.py
backend/tests/unit/: test_domain_models.py  test_gamification_algorithms.py
frontend/: .gitignore  .metadata  analysis_options.yaml  pubspec.yaml
frontend/lib/: injection_container.dart  main.dart
frontend/lib/core/constants/: api_constants.dart
frontend/lib/core/error/: exceptions.dart  failures.dart
frontend/lib/core/network/: dio_client.dart
frontend/test/: widget_test.dart
(+50 files in other folders)
