[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "fastapi==0.109.0",
    "httpx==0.26.0",
    "pydantic==2.5.3",
    "pydantic-settings==2.1.0",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "python-dateutil==2.8.2",
    "python-dotenv==1.0.0",
    "python-multipart==0.0.6",
    "sqlalchemy[asyncio]==2.0.25",
    "uvicorn[standard]==0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "aiosqlite==0.20.0",
    "mypy==1.17",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
    "ruff==0.14",
]
